--- a/client/src/features/viewFilm/DetailViewModal.css
+++ b/client/src/features/viewFilm/DetailViewModal.css
@@ -13,8 +13,8 @@
   }
 
 .modalContainer {
-    width: 500px;
-    height: 400px;
+    width: 1500px;
+    height: 1200px;
     border-radius: 12px;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -32,16 +32,24 @@
   .modalContainer .body {
     flex: 50%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
     font-size: 1.7rem;
     text-align: center;
   }
 
   .modalContainer .footer {
-    flex: 20%;
+    flex: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .image {
+   width: 35%;
+   margin-right: 50px;
+  }
+  
+  .genres {
+    display: flex;
+    justify-content: center;
   }
