--- a/client/src/features/viewFilm/DetailViewModal.css
+++ b/client/src/features/viewFilm/DetailViewModal.css
@@ -16,7 +16,7 @@
     width: 1500px;
     height: 1200px;
     border-radius: 12px;
-    background-color: white;
+    background-color: lightblue;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     display: flex;
     flex-direction: column;
