--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 10%;
+  height: 15%;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   transition: transform 0.3s ease-in-out;
@@ -18,7 +18,8 @@
 }
 
 .logo {
-  width: 200px;
+  width: 12vw;
+  height: 12vh;
   padding: 0;
   position: absolute;
   left: 10px;
