--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -8,8 +8,7 @@
   left: 0;
   width: 100%;
   height: 15%;
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  background-color: white;
   transition: transform 0.3s ease-in-out;
 }
 
