--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,11 +16,23 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color:  #c84c3c;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: white;
+}
+
+h1 {
+  color:  #c84c3c;
+}
+
+p {
+  color:  #c84c3c;
+}
+
+span {
+  color:  #c84c3c;
 }
 
 body {
