--- a/client/src/pages/filmPage/FilmPage.css
+++ b/client/src/pages/filmPage/FilmPage.css
@@ -13,3 +13,11 @@
   display: flex;
   justify-content: center;
 }
+
+.detailViewContainer {
+  width: 1280px;
+}
+
+button {
+  margin-bottom: 20px;
+}
